--- a/resources/scss/front/style.scss
+++ b/resources/scss/front/style.scss
@@ -1,4 +1,7 @@
 @import "root";
 @import "../../scss/front/layout/layout";
 @import "../../scss/front/pages/auth";
+@import "layout/includes/buttons";
+@import "layout/includes/checkbox";
+@import "layout/includes/typography";
 
