--- a/resources/scss/front/pages/auth.scss
+++ b/resources/scss/front/pages/auth.scss
@@ -1,14 +1,15 @@
-.auth{
-    .auth-page-wrap{
+.auth {
+    .auth-page-wrap {
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         background-size: cover;
         background-repeat: no-repeat;
         display: flex;
         justify-content: center;
         align-items: center;
         position: relative;
-        &:before{
+
+        &:before {
             content: "";
             position: absolute;
             top: 0;
@@ -18,23 +19,26 @@
             padding: 0;
             background: linear-gradient(0deg, rgba(44, 44, 44, 0.2), rgba(224, 23, 3, 0.6));
         }
-        .auth-box{
+
+        .auth-box {
             position: relative;
             z-index: 1;
             max-width: 400px;
             width: 100%;
-            .box-title{
-                color: #fff;
+
+            .box-title {
+                color: var(--white);
                 letter-spacing: 5px;
 
                 span {
                     -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
                     -webkit-text-stroke-width: 2px;
                     font-weight: 700;
-                    -webkit-text-stroke-color: #fff;
+                    -webkit-text-stroke-color: var(--white);
                     margin-bottom: 30px;
                 }
             }
+
             .form-group {
                 margin-bottom: 10px;
                 position: relative;
@@ -49,10 +53,16 @@
 
 
                     &::-webkit-input-placeholder {
-                        color: #fff;
+                        color: var(--white);
                     }
 
                     &:focus {
+                        transition: .3s all ease-out;
+                        background-color: rgba(255, 255, 255, 0.4) !important;
+                        border: none;
+                    }
+
+                    &:focus:active {
                         transition: .3s all ease-out;
                         background-color: rgba(255, 255, 255, 0.4) !important;
                         border: none;
@@ -64,6 +74,7 @@
                     left: 20px;
                     top: 15px;
                 }
+
                 .eye-wrap {
                     position: absolute;
                     right: 25px;
@@ -72,4 +83,14 @@
             }
         }
     }
+}
+
+
+
+/* Change the white to any color */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 1px rgba(255,255,255,0.4) inset !important;
 }
