--- a/resources/scss/front/root.scss
+++ b/resources/scss/front/root.scss
@@ -2,6 +2,7 @@
     --white:#fff;
     --black:#000;
     --theme-color: #f96332;
+    --checkbox-border-color: #e3e3e3;
     --font-family: 'Montserrat', sans-serif;
 }
 body{
