--- a/resources/scss/front/root.scss
+++ b/resources/scss/front/root.scss
@@ -1,10 +1,17 @@
-:root{
-    --white:#fff;
-    --black:#000;
+:root {
+    --white: #fff;
+    --black: #000;
     --theme-color: #f96332;
     --checkbox-border-color: #e3e3e3;
     --font-family: 'Montserrat', sans-serif;
 }
-body{
+
+body {
     font-family: var(--font-family);
+}
+
+
+.error-report {
+    font-size: 12px;
+    color: var(--bs-danger);
 }
