--- a/resources/scss/front/pages/auth.scss
+++ b/resources/scss/front/pages/auth.scss
@@ -50,6 +50,7 @@
                     font-size: .8571em;
                     border: none;
                     transition: .3s all ease-out;
+                    color: var(--white);
 
 
                     &::-webkit-input-placeholder {
