--- a/resources/scss/front/layout/includes/buttons.scss
+++ b/resources/scss/front/layout/includes/buttons.scss
@@ -5,10 +5,11 @@
     padding: 10px 20px;
     transition: .2s all ease-out;
     border: none;
+
     &:hover {
         transition: .2s all ease-out;
-        background-color:darken(#f96332,10%)!important;
-        color: var(--white)!important;
+        background-color: darken(#f96332, 10%) !important;
+        color: var(--white) !important;
         border: none;
         box-shadow: 0 3px 8px 0 rgb(0, 0, 0, 17%);
     }
@@ -50,4 +51,9 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+
+.navbar-toggler:focus {
+    box-shadow:0px 0px 5px rgba(255, 255, 255, 0.5)
 }
