--- a/resources/scss/front/root.scss
+++ b/resources/scss/front/root.scss
@@ -15,3 +15,12 @@ body {
     font-size: 12px;
     color: var(--bs-danger);
 }
+
+.w-120px {
+    width: 120px;
+}
+
+.py-10px{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
