--- a/resources/scss/front/pages/profile.scss
+++ b/resources/scss/front/pages/profile.scss
@@ -32,3 +32,34 @@
         }
     }
 }
+
+
+.modal-avatar-wrap {
+    position: relative;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+
+    .upload-label {
+        padding: 6px 10px;
+        position: absolute;
+        z-index: 1;
+        border: 2px dashed var(--checkbox-border-color);
+        border-radius: 50%;
+        bottom: -15px;
+        left: 55%;
+
+        .edit-icon {
+            width: 16px;
+            height: 16px;
+        }
+
+    }
+
+    .modal-avatar {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+}
