--- a/resources/scss/front/layout/includes/header.scss
+++ b/resources/scss/front/layout/includes/header.scss
@@ -1,24 +1,7 @@
 .header {
     width: 100%;
-    height: 400px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: relative;
-
-    @media screen and (max-width: 991px) {
-        height: auto;
-    }
-
-    &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: rgba(0, 0, 0, .5);
-    }
+    position: fixed;
+    z-index: 1;
 
     .navbar {
         .navbar-brand {
