--- a/resources/scss/front/pages/home.scss
+++ b/resources/scss/front/pages/home.scss
@@ -16,5 +16,19 @@
             bottom: 0;
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6));
         }
+
+        .home-banner-content{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            position: relative;
+            z-index: 1;
+            align-items: center;
+            color: var(--white);
+            .banner-title{
+            }
+        }
     }
 }
