[bm-6]-service section created

--- a/resources/scss/front/root.scss
+++ b/resources/scss/front/root.scss
@@ -1,6 +1,7 @@
 :root {
     --white: #fff;
     --black: #000;
+    --text-1: #2d3748;
     --theme-color: #f96332;
     --checkbox-border-color: #e3e3e3;
     --font-family: 'Montserrat', sans-serif;
@@ -23,4 +24,9 @@ body {
 .py-9px{
     padding-top: 9px;
     padding-bottom: 9px;
+}
+
+
+.text-theme{
+    color: var(--theme-color);
 }
