--- a/resources/scss/front/pages/home.scss
+++ b/resources/scss/front/pages/home.scss
@@ -17,7 +17,7 @@
             background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6));
         }
 
-        .home-banner-content{
+        .home-banner-content {
             width: 100%;
             height: 100%;
             display: flex;
@@ -27,7 +27,57 @@
             z-index: 1;
             align-items: center;
             color: var(--white);
-            .banner-title{
+
+            .banner-title {
+            }
+        }
+    }
+
+    .service-box {
+        .icon-box {
+            width: 70px;
+            height: 70px;
+            float: left;
+            background-color: var(--text-1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            transition: .3s all ease-in-out;
+            img{
+                transition: .3s all ease-in-out;
+            }
+        }
+
+        .content {
+            padding-left: 90px;
+
+            .service-title {
+                text-decoration: none;
+                color: var(--text-1);
+                font-weight: 700;
+                font-size: 18px;
+                margin-bottom: 10px;
+                display: block;
+                transition: .3s all ease-in-out;
+            }
+        }
+
+        &:hover {
+            .icon-box {
+                background-color: var(--theme-color);
+                transition: .3s all ease-in-out;
+                img{
+                    transform: scale(1.2);
+                    transition: .3s all ease-in-out;
+                }
+            }
+
+            .content {
+                .service-title {
+                    color: var(--theme-color);
+                    transition: .3s all ease-in-out;
+                }
             }
         }
     }
