[bm-6]-carousel added and testimonial section created

--- a/resources/scss/front/pages/home.scss
+++ b/resources/scss/front/pages/home.scss
@@ -81,4 +81,23 @@
             }
         }
     }
+
+
+
+    .feedback-content{
+        .each-feedback{
+            .client-wrap{
+                .client-img{
+                    width: 70px;
+                    height: 70px;
+                    overflow: hidden;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+            }
+        }
+    }
 }
