--- a/resources/scss/front/pages/profile.scss
+++ b/resources/scss/front/pages/profile.scss
@@ -1,6 +1,6 @@
 .profile-page {
     .profile-header {
-        margin-bottom: 150px;
+        margin:150px 0 100px;
 
         @media screen and (max-width: 991px) {
             margin-bottom: 50px;
@@ -13,8 +13,6 @@
             height: 200px;
             border-radius: 50%;
             background-color: var(--black);
-            position: absolute;
-            top: -100px;
             overflow: hidden;
 
             @media screen and (max-width: 991px) {
