--- a/resources/scss/front/style.scss
+++ b/resources/scss/front/style.scss
@@ -13,4 +13,5 @@
 @import "../../scss/front/pages/auth";
 @import "../../scss/front/pages/profile";
 @import "../../scss/front/pages/home";
+@import "../../scss/front/pages/dashboard";
 
