--- a/resources/scss/front/pages/dashboard.scss
+++ b/resources/scss/front/pages/dashboard.scss
@@ -1,10 +1,11 @@
-.dashboard{
+.dashboard {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
-    &:before{
+
+    &:before {
         content: "";
         position: absolute;
         top: 0;
@@ -14,12 +15,16 @@
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8));
     }
 
-    .card-glass{
+    .card-glass {
         background-color: transparent;
         border: none;
-        box-shadow:0  0 5px rgba(255,255,255,.3);
-        backdrop-filter:blur(10px);
+        box-shadow: 0 0 5px rgba(255, 255, 255, .3);
+        backdrop-filter: blur(10px);
         color: var(--white);
 
+        .glass-body{
+            height: 650px;
+            overflow: auto;
+        }
     }
 }
