--- a/resources/scss/front/layout/includes/header.scss
+++ b/resources/scss/front/layout/includes/header.scss
@@ -45,9 +45,9 @@
                     }
                 }
 
-                .user-chevron {
+              /*  .user-chevron {
                     transition: .3s al ease-in-out;
-                }
+                }*/
 
                 .header-dropdown-wrap {
                     .header-dropdown {
@@ -97,10 +97,10 @@
 
                 &:hover {
 
-                    .user-chevron {
+                /*    .user-chevron {
                         transform: rotate(180deg);
                         transition: .3s all ease-in-out;
-                    }
+                    }*/
 
                     .header-dropdown {
                         transition: .3s all ease-in-out;
