--- a/resources/scss/front/root.scss
+++ b/resources/scss/front/root.scss
@@ -28,9 +28,9 @@ body {
 
 
 
-.bg-lg-dark{
+.bg-lg-light{
     @media screen and (max-width: 991px) {
-background-color: var(--bs-dark);
+background-color: var(--bs-light);
     }
 }
 
