--- a/resources/scss/front/pages/profile.scss
+++ b/resources/scss/front/pages/profile.scss
@@ -37,7 +37,7 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
-
+    border:1px solid var(--bs-dark);
     .upload-label {
         padding: 6px 10px;
         position: absolute;
@@ -59,5 +59,6 @@
         height: 100%;
         border-radius: 50%;
         object-fit: cover;
+
     }
 }
