--- a/resources/scss/front/layout/includes/buttons.scss
+++ b/resources/scss/front/layout/includes/buttons.scss
@@ -57,3 +57,21 @@
 .navbar-toggler:focus {
     box-shadow:0px 0px 5px rgba(255, 255, 255, 0.5)
 }
+
+.btn-icon {
+    border-radius: 50%;
+    transition: .3s all ease;
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        width: 20px;
+        height: 20px;
+    }
+    &:hover{
+        background-color: var(--bs-light);
+        transition: .3s all ease;
+    }
+}
