[bm-7]-issue fixed

--- a/resources/scss/front/pages/profile.scss
+++ b/resources/scss/front/pages/profile.scss
@@ -53,6 +53,10 @@
             height: 16px;
         }
 
+        .btn-loading{
+            padding: 8px;
+        }
+
     }
 
     .modal-avatar {
