[bm-7]-some update

--- a/resources/scss/front/pages/dashboard.scss
+++ b/resources/scss/front/pages/dashboard.scss
@@ -6,7 +6,7 @@
     }
 
     .list-wrap {
-        grid-template-columns: 1fr 1fr;
+        //grid-template-columns: 1fr 1fr;
         gap: 20px;
 
         .each-book {
