--- a/resources/scss/front/pages/profile.scss
+++ b/resources/scss/front/pages/profile.scss
@@ -1,11 +1,10 @@
 .profile-page {
+    margin-top: 150px;
     .profile-header {
-        margin: 150px 0 100px;
+        margin-bottom: 100px;
 
         @media screen and (max-width: 991px) {
             margin-bottom: 50px;
-            margin-top: 50px;
-
         }
 
         .profile-pic {
@@ -26,6 +25,16 @@
                 width: 100%;
                 height: 100%;
                 border-radius: 50%;
+            }
+        }
+    }
+
+    .profile-action {
+        .btn-theme {
+            width: 50%;
+
+            @media screen and (max-width: 576px) {
+                width: 75%;
             }
         }
     }
@@ -53,7 +62,7 @@
             height: 16px;
         }
 
-        .btn-loading{
+        .btn-loading {
             padding: 8px;
         }
 
