[bm-7]-final layout

--- a/resources/scss/front/layout/includes/buttons.scss
+++ b/resources/scss/front/layout/includes/buttons.scss
@@ -71,7 +71,7 @@
         height: 20px;
     }
     &:hover{
-        background-color: var(--bs-light);
+        background-color: var(--lighten);
         transition: .3s all ease;
     }
 }
