--- a/resources/scss/front/layout/includes/typography.scss
+++ b/resources/scss/front/layout/includes/typography.scss
@@ -41,7 +41,7 @@
 
 
 .no-data {
-    padding: 100px 0;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
