[bm-7]-profile update

--- a/resources/scss/front/style.scss
+++ b/resources/scss/front/style.scss
@@ -5,6 +5,7 @@
 @import "../../scss/front/layout/layout";
 
 //components
+@import "layout/includes/header";
 @import "layout/includes/buttons";
 @import "layout/includes/checkbox";
 @import "layout/includes/typography";
