--- a/resources/scss/front/pages/auth.scss
+++ b/resources/scss/front/pages/auth.scss
@@ -9,17 +9,6 @@
         align-items: center;
         position: relative;
 
-        &:before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            padding: 0;
-            background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8));
-        }
-
         .auth-box {
             position: relative;
             z-index: 1;
@@ -27,14 +16,14 @@
             width: 100%;
 
             .box-title {
-                color: var(--white);
+                color: var(--black);
                 letter-spacing: 5px;
 
                 span {
                     -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
                     -webkit-text-stroke-width: 2px;
                     font-weight: 700;
-                    -webkit-text-stroke-color: var(--white);
+                    -webkit-text-stroke-color: var(--black);
                     margin-bottom: 30px;
                 }
             }
@@ -48,13 +37,12 @@
                     border-radius: 30px !important;
                     padding: 15px 20px 15px 60px;
                     font-size: .8571em;
-                    border: none;
                     transition: .3s all ease-out;
-                    color: var(--white);
+                    color: var(--black);
 
 
                     &::-webkit-input-placeholder {
-                        color: var(--white);
+                        color: var(--black);
                     }
 
                     &:focus {
