--- a/resources/scss/front/style.scss
+++ b/resources/scss/front/style.scss
@@ -9,10 +9,11 @@
 @import "layout/includes/buttons";
 @import "layout/includes/checkbox";
 @import "layout/includes/typography";
+@import "layout/includes/card";
 
 //pages
 @import "../../scss/front/pages/auth";
 @import "../../scss/front/pages/profile";
 @import "../../scss/front/pages/home";
-@import "../../scss/front/pages/dashboard";
+
 
